--- a/robo-store/tsconfig.json
+++ b/robo-store/tsconfig.json
@@ -14,5 +14,7 @@
 		"incremental": true
 	},
 	"include": ["**/*.ts"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules"],
+	"experimentalDecorators": true,
+	"emitDecoratorMetadata": true
 }
