--- a/robo-store-plugin/package.json
+++ b/robo-store-plugin/package.json
@@ -40,6 +40,7 @@
 		"discord.js": "^14.16.3",
 		"eslint": "^9.12.0",
 		"globals": "^15.11.0",
+		"nanoid": "^5.0.7",
 		"prettier": "^3.3.3",
 		"robo.js": "^0.10.19",
 		"typescript": "^5.6.3",
