--- a/robo-store-plugin/package.json
+++ b/robo-store-plugin/package.json
@@ -61,6 +61,7 @@
 		"http": "^0.0.1-security",
 		"mongoose": "^8.7.1",
 		"pagination.djs": "^4.0.16",
-		"vite": "^5.4.8"
+		"vite": "^5.4.8",
+		"zod": "^3.23.8"
 	}
 }
