--- a/robo-store-plugin/package.json
+++ b/robo-store-plugin/package.json
@@ -59,8 +59,9 @@
 		"extensionless": "^1.9.9",
 		"h3": "^1.13.0",
 		"http": "^0.0.1-security",
+		"i": "^0.3.7",
 		"mongoose": "^8.7.1",
-		"pagination.djs": "^4.0.16",
+		"npm": "^10.9.0",
 		"vite": "^5.4.8",
 		"zod": "^3.23.8"
 	}
