--- a/robo-store-plugin/package.json
+++ b/robo-store-plugin/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "robo-store",
-	"description": "",
+	"description": "🛒 Minimal store plugin for Robo.js with backend api & storefront... ",
 	"version": "0.0.1",
 	"type": "module",
 	"private": false,
@@ -62,7 +62,6 @@
 		"i": "^0.3.7",
 		"mongoose": "^8.7.1",
 		"npm": "^10.9.0",
-		"vite": "^5.4.8",
-		"zod": "^3.23.8"
+		"vite": "^5.4.8"
 	}
 }
