--- a/robo-store-demo/tsconfig.json
+++ b/robo-store-demo/tsconfig.json
@@ -11,8 +11,7 @@
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
-		"incremental": true,
-		"typeRoots": ["./env.d.ts"]
+		"incremental": true
 	},
 	"include": ["**/*.ts"],
 	"exclude": ["node_modules"]
